Fix Safari bug where hidden elements have height (#1006)
When loading the WAYF with the previously selected section, there was a significant scroll below that section (with only the blue background).  Some two or three screens worth.

The bug was caused by Safari taking into account the height of some hidden elements to calculate the page height, despite them being hidden.  Two in particular were the cause:
- all children of the remaining section, hidden by use of the hidden attribute but with a height and a display.
- the submit button, hidden by the class visually-hidden and the attribute hidden.

--- a/theme/base/stylesheets/pages/wayf/idpList.scss
+++ b/theme/base/stylesheets/pages/wayf/idpList.scss
@@ -138,6 +138,11 @@
                         &focus {
                             border: 3px solid $white;
                         }
+
+                        // if this is absent, Safari uses the height despite it being visually hidden
+                        &.visually-hidden {
+                            height: 0;
+                        }
                     }
                 }
             }
