--- a/theme/base/stylesheets/pages/wayf/remainingIdps.scss
+++ b/theme/base/stylesheets/pages/wayf/remainingIdps.scss
@@ -6,6 +6,11 @@
     }
 
     &.hidden {
+        // if this is absent, Safari uses the height despite it being visually hidden
+        > * {
+            display: none;
+        }
+
         @include motion {
             display: block !important;
             max-height: 0;
